Start version `6.0`
* Upgrade the project to Spring Boot `4.0.x`
* Upgrade all the possible dependencies to their latest major/minor versions
* Upgrade Gradle to `9.3.1`
* Upgrade to Spring Cloud AWS `4.0` and remove redundant now Spring Integration AWS dependency
* Fix all the modules for required now new Spring Boot modular dependencies
* Fix all the modules for reported deprecations and wrong imports
* Remove `com.github.spotbugs` and use `io.spring.nullability` instead